--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "build:clean": "rm -rf ./lib",
     "build:watch": "tsc --watch",
+    "apphosting:build": "apphosting-adapter-nextjs-build",
     "dev": "next dev",
     "lint": "next lint"
   },
@@ -13,6 +14,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "wei-adapter-nextjs":"14.0.21",
     "@genkit-ai/ai": "^0.5.0-rc.8",
     "@genkit-ai/core": "^0.5.0-rc.8",
     "@genkit-ai/dotprompt": "^0.5.0-rc.8",
