--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "wei-adapter-nextjs":"14.0.21",
+    "@apphosting/adapter-nextjs":"14.0.15",
     "@genkit-ai/ai": "^0.5.0-rc.8",
     "@genkit-ai/core": "^0.5.0-rc.8",
     "@genkit-ai/dotprompt": "^0.5.0-rc.8",
