--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build:clean": "rm -rf ./lib",
     "build:watch": "tsc --watch",
     "dev": "next dev",
-    "lint": "next lint",
-    "gcp-build": "wei-apphosting-adapter-nextjs-build"
+    "lint": "next lint"
   },
   "name": "nextjs-test-app",
   "version": "0.1.0",
@@ -16,8 +15,6 @@
   "dependencies": {
     "@genkit-ai/ai": "^0.5.0-rc.8",
     "@genkit-ai/core": "^0.5.0-rc.8",
-    "wei-adapter-nextjs": "14.0.23",
-    "@apphosting/adapter-nextjs": "14.0.15",
     "@genkit-ai/dotprompt": "^0.5.0-rc.8",
     "@genkit-ai/flow": "^0.5.0-rc.8",
     "@genkit-ai/googleai": "^0.5.0-rc.8",
